# rust-zusi-result-ws

./: Cargo.toml  README.md
data/: Ergebnis0.result.xml  Ergebnis1.result.xml  Ergebnis2.result.xml  Ergebnis3.result.xml
zusi-result-cli/: Cargo.toml  README.md
zusi-result-cli/src/: cli.rs  lib.rs  main.rs
zusi-result-lib/: Cargo.toml  README.md
zusi-result-lib/src/: lib.rs  result_analyser.rs  result_analyser_group.rs
zusi-result-lib/src/result_analyser/: helpers.rs  tests.rs
zusi-result-lib/src/result_analyser_group/: analyser_group_cache.rs  tests.rs
